fixing background image, not showing up

--- a/assets/style.css
+++ b/assets/style.css
@@ -5,7 +5,7 @@ body {
   height: 100vh;
   margin: 0;
   font-family: 'Sofia Sans', sans-serif;
-  background-image: url(/clouds-ga7e67a17a_1920.JPG)
+  background-image: url(/clouds-ga7e67a17a1920.JPG)
 }
 
 .card {
